[package]
name = "movable"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

axum = "0.6.18"
hyperlocal = "0.8.0"

tonic = "0.9.2"
tokio = { version = "1.28.2", features = ["rt", "macros", "net", "time", "signal"] }
futures = "0.3.28"

async-trait = "0.1.68"
async-fn-stream = "0.2.0"

differ = "1.0.4"
memmap = "0.7.0"
walkdir = "2.3.3"
fastcdc = "3.0.3"


anyhow = "1.0.71"
serde = "1.0.164"
serde_json = "1.0.97"

openraft = "0.8.3"
openraft-rocksstore = "0.8.3"

protokit = { version = "0.1.3", features = ["textformat", "grpc"]}
bollard = "0.14.0"
docker_plugin = "0.0.3"

[build-dependencies]
protokit_build = "0.1.3"